src/app/index/index.component.scss
@import '~bourbon/app/assets/stylesheets/_bourbon';
@import '~bourbon-neat/app/assets/stylesheets/_neat';
@import '~bourbon-bitters/app/assets/stylesheets/_variables';
@import '~bourbon-bitters/app/assets/stylesheets/_buttons';
@import '../../scss/variables';

:host { width: 100%; display: block; }

/* Main View Styles */
#index { color: #fff; }

/* Header Banner */
#header__main {
  height: 55px;
  padding: 10px 0;
  background-color: $primary-bg;
  text-align: left;
  border-bottom: 2px solid #19474c;

  .logo {
    position: absolute;
    left: rem(16);
    top: rem(16);
    height: 25px;
  }
  .title {
    height: 20px;
    margin: 8px 0 0 52px;
  }
  .btn__settings {
    position: absolute;
    right: rem(80);
    top: rem(16);
    .gear { width: 24px; }
  }
  .switch {
    position: absolute;
    right: rem(20);
    top: rem(16);
  }
}

/* Disconnected Screen */
#off-screen img { margin-top: rem(48); width: 100%; }

/* Connected Screen */
#on-screen {
  padding-top: 20px;

  .flags-wrap {
    @include pad(0 rem(20));
    overflow: auto;

    .title {
      @include span-columns(12);
      font-size: rem(18);
      text-align: center;
      margin-top: rem(4);
    }

    .location {
      @include span-columns(4);
      text-align: center;
      position: relative;
      z-index: 2;
      &.last { @include omega; cursor: pointer; }

      .flag-container {
        width: rem(70);
        height: rem(70);
        margin-top: rem(20);
        line-height: rem(88);
        background: url('/assets/public_location.png');
        width: rem(105);
        height: rem(167);
        background-size: rem(105);

        img {
          box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.5);
          margin-top: rem(67);
          width: rem(44);
          margin-left: rem(-8);
          height: rem(28);
        }

        &.small {
          width: rem(50);
          height: rem(50);
          line-height: rem(60);
          border-radius: 4px;
          background: none;
          background-color: #ffffff;
          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.5);
          margin: 0 auto;
          margin-top: rem(76);

          &.square { line-height: rem(75); }

          img {
            margin-top: 0;
            width: rem(35);
            height: rem(35);
            margin-left: 0;
            &.flag { height: rem(19); }
          }
        }
      }

      .subtitle {
        margin-top: rem(10);
        text-align: center;
        font-weight: 200;
        max-width: 100%;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;

        &.bold {font-weight: 400; }
        a {
          @include display(block);
          line-height: 1.35rem;
          font-weight: 200;
          div {
            -webkit-text-stroke: 1px rgba(169, 169, 169, 0.6);
            color: rgba(169, 169, 169, 0.6);
            margin-top: rem(-4px);
            font-size: 5px;
          }
          &:hover div {
            -webkit-text-stroke: 1px rgba(169, 169, 169, 0.4);
            color: rgba(169, 169, 169, 0.4);
          }
        }
      }
    }
  }

  .scrolling-binary {
    position: absolute;
    top: rem(210);
    z-index: 1;
    color: rgba(255, 255, 255, 0.4);
    left: 0;
    right: 0;
    margin: 0 50px;
    overflow: hidden;
    font-size: rem(12);
    .right {
      width: rem(275);
      white-space: nowrap;
      animation: rscroll 15s linear infinite alternate;
    }
    .left {
      width: rem(275);
      white-space: nowrap;
      animation: lscroll 15s linear infinite alternate;
    }

    @keyframes lscroll {
      0%   { transform: translate(0, 0); }
      100% { transform: translate(-50%, 0); }
    }
    @keyframes rscroll {
      0%   { transform: translate(-50%, 0); }
      100% { transform: translate(0, 0); }
    }
  }

  .cypher-buttons {
    width: 100%;
    margin-top: 30px;
    border-top: 15px solid #010011;
    overflow: auto;
    color: #8dfffc;
    background-color: $primary-bg;

    .left {
      float: left;
      width: 90px;
    }

    .right {
      float: left;
      width: 270px;

      .row {
        overflow: auto;
        border-bottom: 1px solid #010011;
        &:last-child { border-bottom: 0; }

        .third {
          float: left;
          border-right: 1px solid #010011;
          &:last-child { border-right: 0; }
        }
      }
    }

    .button {
      width: 88px;
      height: 90px;
      float: left;
      cursor: pointer;
      &:hover { background-color: $primary-bg-light; }
      &.disabled {
        cursor: default;
        background-color: $primary-bg-dark;
      }

      &.checked {
        background-color: #010011;
        .icon { border: 1px solid #ffe49a; }
        .title { color: #ffe49a; }
      }

      &.tall {
        width: 90px;
        height: 180px;
        border-right: 1px solid #010011;

        .icon {
          width: 64px;
          height: 64px;
          margin-top: 50px;
          padding: 10px;
        }
      }

      .icon {
        width: 46px;
        height: 46px;
        margin: 10px auto 5px;
        padding: 5px;
        border-radius: 3px;
        border: 1px solid #19474c;
        background-color: #010011;
        text-align: center;
        img { height: 100%; }

        &.rocket {
          padding: 10px 5px;
          img { width: 100%; }
        }

        &.more {
          padding: 16px 10px 20px;
          img { width: 100%; }
        }
      }

      .title { text-align: center; }
    }
  }
}

